# SudokuSolver

./: README.md
SudokuSolver/: AbstractSolver.cpp  AbstractSolver.h  CMakeLists.txt  IO.cpp  IO.h  Menu.cpp  Menu.h  Solver.cpp  Solver.h  SolverWithIterations.cpp  SolverWithIterations.h  a.out  main.cpp
SudokuSolver/Solved/: 1-6-2017,03;43.txt  1-6-2017,14;37.txt
SudokuSolver/SolvedTables/: 1-6-2017, 04;01.txt
SudokuSolver/Unsolved/: primer1.txt  primer2.txt
